Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5544

HA memory leak in backup broker after shutdown.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.26
    • 0.27
    • C++ Clustering
    • None

    Description

      Valgrind shows memory leaks in backup broker after taking these steps:

      1. Start primary broker
      2. Create a queue
      3. Start backup broker with valgrind
      4. Wait to see "Joining established cluster" message from backup
      5. Shut down backup broker

      Valgrind will reprort memory leaks.

      For more detail see: https://bugzilla.redhat.com/show_bug.cgi?id=1004411

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: