QPID-5544: HA memory leak in backup broker after shutdown.

The memory leaks were due to shared_ptr cycles between the QueueReplicator,
Bridge and Link objects. This patch breaks the cycles using weak_ptrs
in the appropriate places.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1565340 13f79535-47bb-0310-9956-ffa450edef68